# stellerom

./: LICENSE  README.md  docker-compose.yaml
.github/workflows/: app.yaml  capp-stellerom-room-api-dev-AutoDeployTrigger-d5b0648c-9106-4538-a00a-d7e4f0a26b33.yml  deploy.yml  osm-sync.yaml  review-api.yaml  room-api.yaml
app/: .env.template  .gitignore  README.md  app.py  deno.json  dev.ts  fresh.config.ts  fresh.gen.ts  import_map.json  main.ts  pyproject.toml  vite.config.ts
app/islands/: EditRoom.tsx  Map.tsx  RangeInput.tsx  SimpleMap.tsx
app/plugins/: kv_oauth.ts
app/routes/: _app.tsx  about.tsx  index.tsx  new-review.tsx  new-room.tsx  osm-sync.tsx  profile.tsx
app/routes/rooms/: [id].tsx
app/src/: config.py
app/src/_pages/: __init__.py  manage_rooms.py  room_details.py  rooms_map.py
app/src/services/: __init__.py  review_api.py  room_api.py
app/utils/: Header.tsx  auth.ts  models.ts
osm-sync/: Cargo.toml  Dockerfile
osm-sync/src/: main.rs  models.rs
review-api/: Cargo.toml  Dockerfile  README.md
review-api/src/: create_review.rs  get_reviews.rs  healthcheck.rs  main.rs  models.rs
room-api/: Cargo.toml  Dockerfile  README.md
room-api/src/: create_room.rs  delete_room.rs  get_rooms.rs  main.rs  models.rs  simple_types.rs  update_room.rs
room-service/: Cargo.toml  build.rs
room-service/proto/: room-service.proto
room-service/src/: client.rs  server.rs
scripts/: az-bootstrap-containerapp-job.bash  az-bootstrap-containerapp.bash  az-create-federated-credentials-for-deploy.bash  az-create-storage-account.bash
