[project]
name = "app"
version = "0.1.0"
description = "Find and review changing rooms near you!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings==2.*",
    "pydantic==2.*",
    "streamlit==1.*",
    "geojson>=3.2.0",
    "streamlit-js-eval>=0.1.7",
    "streamlit-folium>=0.24.0",
]

[dependency-groups]
dev = [
    "basedpyright==1.*",
    "pytest==8.*",
    "ruff>=0.8.4",
]
