[package]
name = "osm-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bounded-integer = { version = "0.5", features = ["std", "types", "serde1"] }
geojson = "0.24"
mongodb = "3"
osmgraph = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
