[package]
name = "room-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "room-service-server"
path = "src/server.rs"

[[bin]]
name = "room-service-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"
